Perma [tier 2] tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds (code 3, args "") [0.1 s]
Categories
(Core :: JavaScript Engine: JIT, defect, P1)
Tracking
()
People
(Reporter: intermittent-bug-filer, Assigned: lth)
Details
(Keywords: intermittent-failure)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=347668682&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ZWW_29SnTZKMYE4v0KyNzg/runs/0/artifacts/public/logs/live_backing.log
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - TEST-PASS | tests/jit-test/jit-test/tests/wasm/fence.js | Success (code 59, args "--disable-wasm-huge-memory") [0.1 s]
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Exit code: 3
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - FAIL - wasm/float-unaligned.js
[task 2021-08-06T16:23:22.985Z] 16:23:22 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds (code 3, args "") [0.1 s]
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO exit-status : 3
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO timed-out : False
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout >
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2>
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Exit code: 3
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - FAIL - wasm/float-unaligned.js
[task 2021-08-06T16:23:22.985Z] 16:23:22 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds (code 3, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.3 s]
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO exit-status : 3
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO timed-out : False
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stdout >
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO stderr 2>
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - Exit code: 3
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - FAIL - wasm/float-unaligned.js
[task 2021-08-06T16:23:22.985Z] 16:23:22 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds (code 3, args "--baseline-eager") [0.1 s]
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO exit-status : 3
[task 2021-08-06T16:23:22.985Z] 16:23:22 INFO - INFO timed-out : False
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > Stack:
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout >
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> Stack:
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2>
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - Stack:
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - Exit code: 3
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - FAIL - wasm/float-unaligned.js
[task 2021-08-06T16:23:22.986Z] 16:23:22 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds (code 3, args "--wasm-compiler=optimizing") [0.1 s]
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO exit-status : 3
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO timed-out : False
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > Stack:
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stdout >
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> Stack:
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:22.986Z] 16:23:22 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:26.294Z] 16:23:22 INFO - INFO stderr 2>
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:227:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - Stack:
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[2]:0xe3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:112:54
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:227:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - Stack:
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[2]:0xe3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:112:54
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - Exit code: 3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - FAIL - wasm/float-unaligned.js
[task 2021-08-06T16:23:26.294Z] 16:23:23 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:227:1 RuntimeError: index out of bounds (code 3, args "--wasm-compiler=baseline") [0.1 s]
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO exit-status : 3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO timed-out : False
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stdout > /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:227:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stdout > Stack:
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[2]:0xe3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:112:54
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stdout >
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stderr 2> /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:227:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stderr 2> Stack:
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[2]:0xe3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:112:54
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stderr 2>
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - Stack:
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - Stack:
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - Exit code: 3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - FAIL - wasm/float-unaligned.js
[task 2021-08-06T16:23:26.294Z] 16:23:23 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds (code 3, args "--test-wasm-await-tier2") [0.1 s]
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO exit-status : 3
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO timed-out : False
[task 2021-08-06T16:23:26.294Z] 16:23:23 INFO - INFO stdout > /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stdout > Stack:
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stdout > @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stdout >
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stderr 2> /data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:180:1 RuntimeError: index out of bounds
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stderr 2> Stack:
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js line 82 > WebAssembly.Module:wasm-function[3]:0xb4
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stderr 2> @/data/local/tmp/test_root/tests/wasm/float-unaligned.js:114:45
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - INFO stderr 2>
[task 2021-08-06T16:23:26.295Z] 16:23:23 INFO - TEST-PASS | tests/jit-test/jit-test/tests/wasm/float-unaligned.js | Success (code 59, args "--disable-wasm-huge-memory") [0.1 s]
Comment 1•4 years ago
|
||
Lars, could this be caused by the changes in Bug 1587757?
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 3•4 years ago
|
||
(In reply to Alexandru Michis [:malexandru] from comment #1)
Lars, could this be caused by the changes in Bug 1587757?
Yeah, almost certainly. I'll investigate today.
| Assignee | ||
Comment 4•4 years ago
|
||
I appear to be able to repro a canned test with an ARMv7 GeckoView build on my Samsung Galaxy Tab. Happy(?) times.
| Assignee | ||
Comment 5•4 years ago
|
||
It is only 32-bit accesses that fail, but 32-bit loads and stores both fail.
This is a subtle code generation error. The instruction is loading an unaligned 32-bit floating-point value and it wants to load it into the high single of the double, vld1.32 {d0[1]}, [r12], and the encoding is right for that, f4ac082f. But this is an illegal encoding: when the target is the high single, the alignment bit must be 1 to indicate an aligned acces, ie, we want f4ac083f. But of course this defeats the purpose of what we're doing; the data are unaligned!
(On ARMv7 this is the A1 encoding; on ARMv8 this is the A3 encoding - but it amounts to the same thing. I think I got confused when reading the ARMv8 ARM, because the A1 encoding there does not have this restriction.)
To fix this, it is probably easiest to detect when we are about to target the high single, and in that case to load into the low single of the FPR temp, and move that temp to the high single of the FPR target. This seems like a better solution than going via a GPR.
| Assignee | ||
Comment 6•4 years ago
|
||
This will need a beta uplift.
| Assignee | ||
Comment 7•4 years ago
|
||
When the target register of an unaligned FP load is the high single
of a pair, we must go via a temp. The reason is that the architecture
forbids unaligned loads to target the high single.
Comment 9•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 10•4 years ago
|
||
Appears to be healthy now: https://treeherder.mozilla.org/logviewer?job_id=348174693&repo=mozilla-central&lineNumber=2343.
| Assignee | ||
Comment 11•4 years ago
|
||
Comment on attachment 9235394 [details]
Bug 1724475 - Handle unaligned loads to high singles differently. r?jseward
Beta/Release Uplift Approval Request
- User impact if declined: There will be mysterious crashes for some wasm content on some ARMv7 systems.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): I would say low risk, because this is obscure code that is encountered in corner cases; even if there is a problem here it will affect relatively few users.
Alternative: two patches landed during the code freeze that should not have (bug 1587757 and bug 1723930), my bad. So these could be backed out from beta 92 instead of uplifting the present patch. But I do want to uplift all three patches to ESR91, so it would be better to uplift the present patch to 92 as well.
- String changes made/needed:
Comment 12•4 years ago
|
||
Comment on attachment 9235394 [details]
Bug 1724475 - Handle unaligned loads to high singles differently. r?jseward
Approved for 92.0b3.
Comment 13•4 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Comment 14•4 years ago
|
||
Comment on attachment 9235394 [details]
Bug 1724475 - Handle unaligned loads to high singles differently. r?jseward
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is a required bug fix for the real problem, solved in bug 1587757, q.v. for full details.
- User impact if declined: Continued headaches for distros that build Firefox on ARMv7 systems.
- Fix Landed on Version: FF92
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Corner case problem on ARMv7. The alternative is to let the distros live with the build headache for another full ESR cycle.
- String or UUID changes made by this patch:
Comment 15•4 years ago
|
||
Comment on attachment 9235394 [details]
Bug 1724475 - Handle unaligned loads to high singles differently. r?jseward
Approved for 91.1esr.
Comment 16•4 years ago
|
||
| bugherder uplift | ||
| Comment hidden (Intermittent Failures Robot) |
Description
•