Bug 1724475 - Handle unaligned loads to high singles differently. r=jseward

When the target register of an unaligned FP load is the high single
of a pair, we must go via a temp.  The reason is that the architecture
forbids unaligned loads to target the high single.

Differential Revision: https://phabricator.services.mozilla.com/D122112